k8s/base/apps/frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    istio.io/rev: 1-27-0
