k8s/base/apps/frontend/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  gateways:
    - istio-system/main-gateway
  hosts:
    - frontend
  http:
    - route:
      - destination:
          host: frontend.frontend.svc.cluster.local
          port:
            number: 80
